Actual presentation from half-time

--- a/half_time_presentation.html
+++ b/half_time_presentation.html
@@ -1636,7 +1636,7 @@ body {
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide" data-background="../logos/background_logos.png" data-background-size="1600px"><h3>Half-time&nbspseminar</h3><b>Microsimulation modelling of prostate cancer screening in Sweden: an eScience approach to epidemiology</b><br>2016-09-23,&nbsp;Karolinska&nbsp;Institutet<p><b>Andreas Karlsson</b><br><a href="mailto:andreas.a.karlsson@ki.se">andreas.a.karlsson@ki.se</a></p><p>Supervised&nbsp;by:<br>Mark&nbsp;Clements,&nbsp;Erwin&nbsp;Laure,&nbsp;<br>Alexandra&nbsp;Jauhiainen&nbsp;&&nbsp;Henrik&nbsp;Grönberg</p>
+<section id="sec-title-slide" data-background="images/background_logos.png" data-background-size="1600px"><h3>Half-time&nbspseminar</h3><b>Microsimulation modelling of prostate cancer screening in Sweden: an eScience approach to epidemiology</b><br>2016-09-23,&nbsp;Karolinska&nbsp;Institutet<p><b>Andreas Karlsson</b><br><a href="mailto:andreas.a.karlsson@ki.se">andreas.a.karlsson@ki.se</a></p><p>Supervised&nbsp;by:<br>Mark&nbsp;Clements,&nbsp;Erwin&nbsp;Laure,&nbsp;<br>Alexandra&nbsp;Jauhiainen&nbsp;&&nbsp;Henrik&nbsp;Grönberg</p>
 </section>
 <style media="screen" type="text/css">
   .reveal table th, .reveal table td {
@@ -3515,11 +3515,8 @@ follow-up.<font size='4'><sup><a href="#schroder_screening_2014">4</a></sup></fo
 <li>In contrast, the Prostate, Lung, Colorectal and Ovarian (PLCO) trial
 in the US indicated that organised PSA testing has little effect on
 prostate cancer <span style="white-space: nowrap"> mortality (due to control contamination).<font size='4'><sup><a href="#andriole_prostate_2012">5</a></sup></font></span></li>
-<li>Many parameters affect the effectiveness of prostate cancer
-screening, including screening history.</li>
 
 </ul>
-
 
 </section>
 <section id="slide-orgheadline2">
@@ -3640,7 +3637,7 @@ TP9/f/9/fwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAH//f//3mTt3O3dzRyJEIm7dbl27Xf9/f0yZTLtdXbu1cHc7O////xGQf9QAAABRdFJOUwAz
 mYhm3SLuzHdEEVW7qqfftMd1zUTBzmbu3TMiiFWqEZm7zHfHx92Ix+On52aqu4gRzCJE7pndM5/F
 j5ent3e31o7j+uzo2si/8ffXn4/n4SAN8EsAAAABYktHRACIBR1IAAAACXBIWXMAAADIAAAAyABj
-+uetAAAAB3RJTUUH4AkWDgUjd3xzLQAAMRZJREFUeNrtnQm7hLp535EESCCkuGncervxvbHTpkvs
++uetAAAAB3RJTUUH4AkaCy0s9oO9RQAAMRZJREFUeNrtnQm7hLp535EESCCkuGncervxvbHTpkvs
 aydO3L1J67TprpulvV2+/9eoXi0gZubMmR0Y/r/nOXMYEKDR8kd69SJVFQAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAIB9wrjw1M3h/laqO6/cStku/euuo/ZpwTshbvy5FyQYl+6aa/Yhc/TS6QJ2
 wKConGl1VEDvUQITr9BsTAkEp8/aPVEJKnGNEtSNz5xBduGLWTp5wFvTDOFfe9Wj6hPYNgtt6+LD
@@ -3861,8 +3858,8 @@ JjTZhFgrZcyhtWD+BpKZKnNtmmRk0J0Y+r6vtDVCC/JGNqE1IHjNheBZSjq8gQTACtGKx6rZKvfx
 krv1zOfwnheLLd5KBmCFTDMPtGd68FoWx/o7Zi3BTCUArJJpgFCfm74kzV4myPdA3NG+7zB7GQBr
 pB1HArk8N6WZCo0C8iVidxj/dYMZTQFYJX1jBl3pwTTsXDAWDgtV9fzCC58Cs5wDsFoGYYwRn/Xf
 48onvbhnyqEefQMAts4DVkN7wDJKAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcDP/H9QXf6/U
-RSUPAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE2LTA5LTIyVDE2OjA1OjM1KzAyOjAwKCo4FgAAACV0
-RVh0ZGF0ZTptb2RpZnkAMjAxNi0wOS0yMlQxNjowNTozNSswMjowMFl3gKoAAAAUdEVYdHBkZjpW
+RSUPAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE2LTA5LTI2VDEzOjQ1OjQ0KzAyOjAw/V+2rQAAACV0
+RVh0ZGF0ZTptb2RpZnkAMjAxNi0wOS0yNlQxMzo0NTo0NCswMjowMIwCDhEAAAAUdEVYdHBkZjpW
 ZXJzaW9uAFBERi0xLjUgBVwLOQAAAABJRU5ErkJggg==" style="background:none; border:none; box-shadow:none;" />
 </p>
 </div>
@@ -8624,7 +8621,7 @@ Sweden?</b>
 <ul>
 <li>Current testing is opportunistic.</li>
 <li>Would organised testing be effective and lower costs?</li>
-<li>Testing could be opt-in or opt-out.</li>
+<li>Organising testing could be done in a multitude of ways.</li>
 
 </ul>
 
@@ -8639,8 +8636,8 @@ Sweden?</b>
 <li>Incorporate Swedish input data.</li>
 <li>Calibrate (or fit) NH parameters using Swedish <i>calibration targets</i>.</li>
 <li>Validate the model predictions using Swedish data.</li>
-<li>Evaluate the cost-effectiveness of organised screening, with assumptions
-on cost and compliance.</li>
+<li>Evaluate the cost-effectiveness of organised screening, with
+assumptions on cost and compliance.</li>
 
 </ul>
 
@@ -8770,7 +8767,7 @@ on cost and compliance.</li>
 </section>
 <section>
 <section id="slide-orgheadline27">
-<h3 id="orgheadline27">Methods: Adaption to Swedish population</h3>
+<h3 id="orgheadline27">Methods: Adaptation to Swedish population</h3>
 <div id="small">
 <dl>
 <dt>Input data</dt><dd><ul>
@@ -24842,6 +24839,7 @@ for different policies are compared.</li>
 using utilities and costs for screening intervention \(k\), such that:</li>
 
 </ul>
+
 <div>
 \begin{align*}
   \mathrm{Effectiveness}_k =& \frac{1}{n}\sum_{i=1}^n \int_0^\infty \frac{dU_{ik}(t)}{(1+\delta)^t}\\
@@ -24849,6 +24847,7 @@ using utilities and costs for screening intervention \(k\), such that:</li>
 \end{align*}
 
 </div>
+
 <div align="left">
 <p>
 where we simulate for \(n\) individuals with index \(i\), with
@@ -27235,7 +27234,7 @@ CR9HP555kvzk3dPsp0vPto/jx4ufiz2vfCH/ovFX7V87hGbCSxOOE4Mv/V8+m+RNvvkt87flqcJX
 9FeV00rTLTPGMxdnnWfvv173eupN+puluaLfxX+ve6v19vwfdn8MzofMT73jv1v5s/S9zPsTH0w+
 9C34LLz4mPJxabH4k8ynk585nwe+BH+ZXspZJi5XfdX+2vvN49v4SsrKyn8ALqKQvFCn7rEAAAAg
 Y0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAJiS0dEAP+Hj8y/AAAA
-CXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AkWDgYNgIctIQAAgABJREFUeNrtnXl8FGW2sJ+Z
+CXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AkaCy4aEhR7HwAAgABJREFUeNrtnXl8FGW2sJ+Z
 O/c6w5KEuWSUNSjoEAQSiOIoBgRxgoAsEVEx7AqOAgZBQSCABhCUJYCooGwBccOwK4xISOKu2USN
 Owmb44SZdBJkxrm/L/X90dWV6u7qLd2hupLz1I9Q9a6n3lOnTr1LVf9KQRAEQRCswq/NFkAQBEEQ
 /OdXZgsgXAQiaG62CIIQFvzCuYteZxuzT9qynDEKVPiN2XIJ9Uob2tCWlmaLIQhhwy+c4Qw/8Eu9
@@ -27854,8 +27853,8 @@ g1t4m43gtAAeylvwPfkyUCgIgiCEFb/nUyqirwHF+XXj6AqmMIA5ZssnCIIgCDo20IJR9l2XBfDR
 r/M6sx2RgiAIgmA6y7mD5dE/2A/c39uaQj6v8boshRcEQRBM5xrymc3y6OWOADe3FV0RfQtzGMD3
 TKGj2fIKgiAIjZZrWM6ntOCWaN3k1a+M05ZfwQYGAD/wutlyC4IgCI2OFtxBC2A5y6MraoMVT24L
 oLwFd5DAFWbLLgiCIDRC8smPdus4KfxKMVswQRAEQfCb/w9AsqKCNs0mmgAAACV0RVh0ZGF0ZTpj
-cmVhdGUAMjAxNi0wOS0yMlQxNjowNjoxMyswMjowMOLosVIAAAAldEVYdGRhdGU6bW9kaWZ5ADIw
-MTYtMDktMjJUMTY6MDY6MTMrMDI6MDCTtQnuAAAAFHRFWHRwZGY6VmVyc2lvbgBQREYtMS41IAVc
+cmVhdGUAMjAxNi0wOS0yNlQxMzo0NjoyNiswMjowMEeYFQAAAAAldEVYdGRhdGU6bW9kaWZ5ADIw
+MTYtMDktMjZUMTM6NDY6MjYrMDI6MDA2xa28AAAAFHRFWHRwZGY6VmVyc2lvbgBQREYtMS41IAVc
 CzkAAAAASUVORK5CYII=" style="background:none; border:none; box-shadow:none; width:90%;" />
 </p>
 </div>
@@ -27910,7 +27909,7 @@ CR9HP555kvzk3dPsp0vPto/jx4ufiz2vfCH/ovFX7V87hGbCSxOOE4Mv/V8+m+RNvvkt87flqcJX
 9FeV00rTLTPGMxdnnWfvv173eupN+puluaLfxX+ve6v19vwfdn8MzofMT73jv1v5s/S9zPsTH0w+
 9C34LLz4mPJxabH4k8ynk585nwe+BH+ZXspZJi5XfdX+2vvN49v4SsrKyn8ALqKQvFCn7rEAAAAg
 Y0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAJiS0dEAP+Hj8y/AAAA
-CXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AkWDgYPbolMDQAAMIVJREFUeNrtnb2u80y713/X
+CXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AkaCy4bZRNLiQAAMIVJREFUeNrtnb2u80y713/X
 q7fiY/P6gWIXFMi3ttgF2o1vCTp24VUh0fkWBYgC5MUZZB2C1wGAlIgDQMkhOAUNEkUs7ZIm6RDF
 FvEr7QoKhsKOYzvO11pJ7MT/3+h57pXEHs+MP/6+Zq65xhxCCCFEX/yu7wIIIYQYM5IhIYQQPSIZ
 EkII0SOSISGEED0iGRJCCNEjkiEhhBA9IhkSQgjRI5IhIYQQPSIZEkII0SOSISGEED0iGRJCCNEj
@@ -28129,8 +28128,8 @@ xdkgLlt03ZDVpNxn1XC5rrU2Qbu1Scpft7t6ETMvWz/Ew2NKyhSvtmftuq59mxJXTv1uP52WmJR1
 /ZrozqmzPbYdX4aXtKTSOJMWARdCCNEjGhsSQgjRI5IhIYQQPSIZEkII0SOSISGEED0iGRJCCNEj
 kiEhhBA9IhkSQgjRI5IhIYQQPSIZEkII0SOSISGEED0iGRJCCNEjkiEhhBA9IhkSQgjRI5IhIYQQ
 PSIZEkII0SOSISGEED0iGRJCCNEjkiEhhBA9IhkSQgjRI/8fgT4ysTMlxXoAAAAldEVYdGRhdGU6
-Y3JlYXRlADIwMTYtMDktMjJUMTY6MDY6MTUrMDI6MDCBOIRoAAAAJXRFWHRkYXRlOm1vZGlmeQAy
-MDE2LTA5LTIyVDE2OjA2OjE1KzAyOjAw8GU81AAAABR0RVh0cGRmOlZlcnNpb24AUERGLTEuNSAF
+Y3JlYXRlADIwMTYtMDktMjZUMTM6NDY6MjcrMDI6MDDh7x60AAAAJXRFWHRkYXRlOm1vZGlmeQAy
+MDE2LTA5LTI2VDEzOjQ2OjI3KzAyOjAwkLKmCAAAABR0RVh0cGRmOlZlcnNpb24AUERGLTEuNSAF
 XAs5AAAAAElFTkSuQmCC" style="background:none; border:none; box-shadow:none; height:250px;" />
 </p>
 </div>
@@ -28149,7 +28148,7 @@ false positive fractions.</li>
 </section>
 <section>
 <section id="slide-orgheadline46">
-<h3 id="orgheadline46">Results: Cost-effectiveness of S3M vs PSA</h3>
+<h3 id="orgheadline46">Results: Cost-effectiveness of S3M-panel vs PSA</h3>
 
 <div class="figure">
 <p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAfgAAAH4CAYAAACmKP9/AAAJKWlDQ1BpY2MAAHjalZFnUJSHFobP
@@ -28649,11 +28648,13 @@ prostate cancer screening.</li>
 <section id="slide-orgheadline57">
 <h2 id="orgheadline57">Conclusions</h2>
 <ul>
-<li>Microsimulation is increasingly being used to plan for cancer
-screening, particularly in the context of personalised screening
-(e.g. CISNET, NICE, USPSTF)</li>
+<li>Microsimulation is useful to plan for cancer screening, particularly
+in the context of personalised screening, as indicated by its
+increased use in the field (e.g. CISNET, NICE, USPSTF).</li>
+<li>We contribute with tools and prediction results for the use of these
+methods in the Swedish context.</li>
 <li>These models are complex and care is required to ensure that they
-are valid</li>
+are valid.</li>
 
 </ul>
 
@@ -28661,7 +28662,12 @@ are valid</li>
 </section>
 <section>
 <section id="slide-orgheadline56">
-<h3 id="orgheadline56">Thank you for listening!</h3>
+<h3 id="orgheadline56">Thank you all for listening!</h3>
+<p>
+<b>&#x2026;and a big thank you to supervisors, colleagues and the biostat
+corridor!</b>
+</p>
+
 <p>
 We acknowledge funding support from the Swedish eScience Research
 Centre, the Nordic Information for Action eScience Center and the
