eScience: MathJax in the cloud

--- a/eScience-presentation.html
+++ b/eScience-presentation.html
@@ -1627,7 +1627,7 @@ body {
 
 </style>
 
-<script type="text/javascript" src="/usr/share/javascript/mathjax/unpacked/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
 <div class="reveal">
@@ -8330,7 +8330,7 @@ GHnzebTff/r5mf+/jVEpKf+AgP9/f/9/f/+uiSYTE2k0NLV7Yf9/f/9/fwAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAH//f//3md35kkyZTDt3OyJEIru1cF27XW7dbmbMZv9/f3c7O+53d7tdXd1u
 bv///wfwJNUAAABUdFJOUwAimd3MM7uI7qpEd2YRVad10dbHvyLSuBGq3WbNuzOZRO6IzFX633e3
 35fdn4inp8e3IoiZM+6qEd1EzLunj8OPjsef91Xfn+fnZnf1t8if+pfs3y/Kxk4AAAABYktHRACI
-BR1IAAAACXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AoXEBEZdnruBQAAL99JREFUeNrtnQu7
+BR1IAAAACXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AoXECgLi0cS9wAAL99JREFUeNrtnQu7
 9Lp1121LlmTZcqAk5SQ5aXpOA6VAoeQkJ2kTKPdLgQLtOm0DLW9pv/93QEuSbXlm9p7Zc7M9/v+e
 592vPZY1Hknrr9uyVBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAtkJZCSJZ1fNPiW6I8qab
 15cW9/nJpC6OTBvShdpqIoKNURtqtNbKzj/epQS8kRb3+cmXS4Cm1j8BJAA8B2muqPPeQG+81N4z
@@ -8546,8 +8546,8 @@ WZNdZBLgTJUikSQ5bKnbYf6vmktA13LU3SA7cA0CYGlEPtkXZ/HbOKSXRu1qye484qDJPnMQ1uNo
 OgYJiF7DahgywGtCAKwPlQzaNu+8zl+mCcRAd+24Pl4WBmB9TEN07w3W5UuGqCt79FgyBIAVoobW
 +btrAmQLh9lr1//CwmEArJBa+t681pWIw/tvIWMjvtPaXFmXY/lQANZJ1wgeynu/ik6LiFdEyl0U
 6xEVXAMB2DDYSgSAfYMNxQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE/n/wPAw2dzT6gqnQAA
-ACV0RVh0ZGF0ZTpjcmVhdGUAMjAxNi0xMC0yM1QxODoxNzoyNSswMjowMM5RDM8AAAAldEVYdGRh
-dGU6bW9kaWZ5ADIwMTYtMTAtMjNUMTg6MTc6MjUrMDI6MDC/DLRzAAAAFHRFWHRwZGY6VmVyc2lv
+ACV0RVh0ZGF0ZTpjcmVhdGUAMjAxNi0xMC0yM1QxODo0MDoxMSswMjowMCcamAQAAAAldEVYdGRh
+dGU6bW9kaWZ5ADIwMTYtMTAtMjNUMTg6NDA6MTErMDI6MDBWRyC4AAAAFHRFWHRwZGY6VmVyc2lv
 bgBQREYtMS41IAVcCzkAAAAASUVORK5CYII=" style="background:none; border:none; box-shadow:none; height:600px;" />
 </p>
 </div>
@@ -8646,7 +8646,7 @@ CR9HP555kvzk3dPsp0vPto/jx4ufiz2vfCH/ovFX7V87hGbCSxOOE4Mv/V8+m+RNvvkt87flqcJX
 9FeV00rTLTPGMxdnnWfvv173eupN+puluaLfxX+ve6v19vwfdn8MzofMT73jv1v5s/S9zPsTH0w+
 9C34LLz4mPJxabH4k8ynk585nwe+BH+ZXspZJi5XfdX+2vvN49v4SsrKyn8ALqKQvFCn7rEAAAAg
 Y0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAJiS0dEAP+Hj8y/AAAA
-CXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AoXEBEbmHSPKQAAgABJREFUeNrtnXl8FGW2sJ+Z
+CXBIWXMAAADIAAAAyABj+uetAAAAB3RJTUUH4AoXECgNYiS3wgAAgABJREFUeNrtnXl8FGW2sJ+Z
 O/c6w5KEuWSUNSjoEAQSiOIoBgRxgoAsEVEx7AqOAgZBQSCABhCUJYCooGwBccOwK4xISOKu2USN
 Owmb44SZdBJkxrm/L/X90dWV6u7qLd2hupLz1I9Q9a6n3lOnTr1LVf9KQRAEQRCswq/NFkAQBEEQ
 /OdXZgsgXAQiaG62CIIQFvzCuYteZxuzT9qynDEKVPiN2XIJ9Uob2tCWlmaLIQhhwy+c4Qw/8Eu9
@@ -9265,8 +9265,8 @@ g1t4m43gtAAeylvwPfkyUCgIgiCEFb/nUyqirwHF+XXj6AqmMIA5ZssnCIIgCDo20IJR9l2XBfDR
 r/M6sx2RgiAIgmA6y7mD5dE/2A/c39uaQj6v8boshRcEQRBM5xrymc3y6OWOADe3FV0RfQtzGMD3
 TKGj2fIKgiAIjZZrWM6ntOCWaN3k1a+M05ZfwQYGAD/wutlyC4IgCI2OFtxBC2A5y6MraoMVT24L
 oLwFd5DAFWbLLgiCIDRC8smPdus4KfxKMVswQRAEQfCb/w9AsqKCNs0mmgAAACV0RVh0ZGF0ZTpj
-cmVhdGUAMjAxNi0xMC0yM1QxODoxNzoyNyswMjowMFnOHeYAAAAldEVYdGRhdGU6bW9kaWZ5ADIw
-MTYtMTAtMjNUMTg6MTc6MjcrMDI6MDAok6VaAAAAFHRFWHRwZGY6VmVyc2lvbgBQREYtMS41IAVc
+cmVhdGUAMjAxNi0xMC0yM1QxODo0MDoxMyswMjowMLCFiS0AAAAldEVYdGRhdGU6bW9kaWZ5ADIw
+MTYtMTAtMjNUMTg6NDA6MTMrMDI6MDDB2DGRAAAAFHRFWHRwZGY6VmVyc2lvbgBQREYtMS41IAVc
 CzkAAAAASUVORK5CYII=" style="background:none; border:none; box-shadow:none; width:90%;" />
 </p>
 </div>
